@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR
skinparam classBackgroundColor LOGIC_COLOR
!define ABSTRACT &#123;abstract&#125;

abstract class "{abstract}\nCommand"
abstract class "{abstract}\nEditCommand"
class EditContactCommand
class EditTodoCommand
class EditEventCommand


"{abstract}\nCommand" <|-- "{abstract}\nEditCommand"


"{abstract}\nEditCommand" <|-- EditContactCommand
"{abstract}\nEditCommand" <|-- EditTodoCommand
"{abstract}\nEditCommand" <|-- EditEventCommand

@enduml
